{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 104,
  "lineage": "a32b932b-e130-a100-e60d-ee1b9a7f5f50",
  "resources": [
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gw_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c801953ec92ac368",
            "association_id": "eipassoc-0760b3a5679584956",
            "domain": "vpc",
            "id": "eipalloc-0c801953ec92ac368",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0621808e71af2c7ff",
            "private_dns": "ip-10-0-4-79.ec2.internal",
            "private_ip": "10.0.4.79",
            "public_dns": "ec2-107-22-22-131.compute-1.amazonaws.com",
            "public_ip": "107.22.22.131",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01d40abe4dfeab04f",
            "association_id": "eipassoc-0573e78d1a4618725",
            "domain": "vpc",
            "id": "eipalloc-01d40abe4dfeab04f",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0d8af2fa1684ed548",
            "private_dns": "ip-10-0-5-205.ec2.internal",
            "private_ip": "10.0.5.205",
            "public_dns": "ec2-52-70-94-201.compute-1.amazonaws.com",
            "public_ip": "52.70.94.201",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-077078159c51c493b",
            "association_id": "eipassoc-0003482ac57ff1b57",
            "domain": "vpc",
            "id": "eipalloc-077078159c51c493b",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0d7162e003aeacc73",
            "private_dns": "ip-10-0-6-216.ec2.internal",
            "private_ip": "10.0.6.216",
            "public_dns": "ec2-52-206-99-157.compute-1.amazonaws.com",
            "public_ip": "52.206.99.157",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c801953ec92ac368",
            "connectivity_type": "public",
            "id": "nat-05cb9064c35dd777a",
            "network_interface_id": "eni-0621808e71af2c7ff",
            "private_ip": "10.0.4.79",
            "public_ip": "107.22.22.131",
            "subnet_id": "subnet-0741e02091d198c9b",
            "tags": {
              "Name": "private_nat_gateway-0"
            },
            "tags_all": {
              "Name": "private_nat_gateway-0"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.nat_gw_ip",
            "module.networking.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01d40abe4dfeab04f",
            "connectivity_type": "public",
            "id": "nat-0680ebc725cf71ef2",
            "network_interface_id": "eni-0d8af2fa1684ed548",
            "private_ip": "10.0.5.205",
            "public_ip": "52.70.94.201",
            "subnet_id": "subnet-02858d236506895f9",
            "tags": {
              "Name": "private_nat_gateway-1"
            },
            "tags_all": {
              "Name": "private_nat_gateway-1"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.nat_gw_ip",
            "module.networking.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-077078159c51c493b",
            "connectivity_type": "public",
            "id": "nat-00eb0658341cbacf7",
            "network_interface_id": "eni-0d7162e003aeacc73",
            "private_ip": "10.0.6.216",
            "public_ip": "52.206.99.157",
            "subnet_id": "subnet-0dc8ab89f50134bd3",
            "tags": {
              "Name": "private_nat_gateway-2"
            },
            "tags_all": {
              "Name": "private_nat_gateway-2"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.nat_gw_ip",
            "module.networking.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-051aa8dd070920b41",
            "id": "r-rtb-0cf22bf81797dd4ae1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0cf22bf81797dd4ae",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_route_table.public_route_tables",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-051aa8dd070920b41",
            "id": "r-rtb-00241380ec70fb8a91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00241380ec70fb8a9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_route_table.public_route_tables",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-051aa8dd070920b41",
            "id": "r-rtb-0772c74433585c0a91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0772c74433585c0a9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_route_table.public_route_tables",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-021fbf615c5a95ca91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-05cb9064c35dd777a",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-021fbf615c5a95ca9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_route_table.private_route_tables",
            "module.networking.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.main",
            "module.networking.aws_eip.nat_gw_ip",
            "module.networking.aws_nat_gateway.nat_gw"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d7b87f5c46b277251080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0680ebc725cf71ef2",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d7b87f5c46b27725",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.nat_gw_ip",
            "module.networking.aws_nat_gateway.nat_gw",
            "module.networking.aws_route_table.private_route_tables",
            "module.networking.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b1b70e7c1acaa2ae1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-00eb0658341cbacf7",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b1b70e7c1acaa2ae",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.nat_gw_ip",
            "module.networking.aws_nat_gateway.nat_gw",
            "module.networking.aws_route_table.private_route_tables",
            "module.networking.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_tables",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:396254537602:route-table/rtb-021fbf615c5a95ca9",
            "id": "rtb-021fbf615c5a95ca9",
            "owner_id": "396254537602",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05cb9064c35dd777a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "app-101-route-table"
            },
            "tags_all": {
              "Name": "app-101-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b8e371539856e746"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:396254537602:route-table/rtb-0d7b87f5c46b27725",
            "id": "rtb-0d7b87f5c46b27725",
            "owner_id": "396254537602",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0680ebc725cf71ef2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "app-102-route-table"
            },
            "tags_all": {
              "Name": "app-102-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b8e371539856e746"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:396254537602:route-table/rtb-0b1b70e7c1acaa2ae",
            "id": "rtb-0b1b70e7c1acaa2ae",
            "owner_id": "396254537602",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00eb0658341cbacf7",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "app-103-route-table"
            },
            "tags_all": {
              "Name": "app-103-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b8e371539856e746"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_tables",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:396254537602:route-table/rtb-0cf22bf81797dd4ae",
            "id": "rtb-0cf22bf81797dd4ae",
            "owner_id": "396254537602",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-051aa8dd070920b41",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mgt-101-route-table"
            },
            "tags_all": {
              "Name": "mgt-101-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b8e371539856e746"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:396254537602:route-table/rtb-00241380ec70fb8a9",
            "id": "rtb-00241380ec70fb8a9",
            "owner_id": "396254537602",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-051aa8dd070920b41",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mgt-102-route-table"
            },
            "tags_all": {
              "Name": "mgt-102-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b8e371539856e746"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:396254537602:route-table/rtb-0772c74433585c0a9",
            "id": "rtb-0772c74433585c0a9",
            "owner_id": "396254537602",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-051aa8dd070920b41",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mgt-103-route-table"
            },
            "tags_all": {
              "Name": "mgt-103-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b8e371539856e746"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0565dc1acbd71f8f3",
            "route_table_id": "rtb-021fbf615c5a95ca9",
            "subnet_id": "subnet-0dcaba4b704c02215"
          },
          "dependencies": [
            "module.networking.aws_route_table.private_route_tables",
            "module.networking.aws_subnet.private_subnets",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b584a01abab3d2bc",
            "route_table_id": "rtb-0d7b87f5c46b27725",
            "subnet_id": "subnet-03a07347bec108cc6"
          },
          "dependencies": [
            "module.networking.aws_route_table.private_route_tables",
            "module.networking.aws_subnet.private_subnets",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c4c735e584183faf",
            "route_table_id": "rtb-0b1b70e7c1acaa2ae",
            "subnet_id": "subnet-0779a047daf1bb536"
          },
          "dependencies": [
            "module.networking.aws_route_table.private_route_tables",
            "module.networking.aws_subnet.private_subnets",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:396254537602:subnet/subnet-0dcaba4b704c02215",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dcaba4b704c02215",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "396254537602",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app-101"
            },
            "tags_all": {
              "Name": "app-101"
            },
            "vpc_id": "vpc-0b8e371539856e746"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:396254537602:subnet/subnet-03a07347bec108cc6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03a07347bec108cc6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "396254537602",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app-102"
            },
            "tags_all": {
              "Name": "app-102"
            },
            "vpc_id": "vpc-0b8e371539856e746"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:396254537602:subnet/subnet-0779a047daf1bb536",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0779a047daf1bb536",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "396254537602",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app-103"
            },
            "tags_all": {
              "Name": "app-103"
            },
            "vpc_id": "vpc-0b8e371539856e746"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:396254537602:subnet/subnet-0741e02091d198c9b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0741e02091d198c9b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "396254537602",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mgt-101"
            },
            "tags_all": {
              "Name": "mgt-101"
            },
            "vpc_id": "vpc-0b8e371539856e746"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:396254537602:subnet/subnet-02858d236506895f9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02858d236506895f9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "396254537602",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mgt-102"
            },
            "tags_all": {
              "Name": "mgt-102"
            },
            "vpc_id": "vpc-0b8e371539856e746"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:396254537602:subnet/subnet-0dc8ab89f50134bd3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dc8ab89f50134bd3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "396254537602",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mgt-103"
            },
            "tags_all": {
              "Name": "mgt-103"
            },
            "vpc_id": "vpc-0b8e371539856e746"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:396254537602:internet-gateway/igw-051aa8dd070920b41",
            "id": "igw-051aa8dd070920b41",
            "owner_id": "396254537602",
            "tags": {
              "Automated": "yes",
              "Name": "main"
            },
            "tags_all": {
              "Automated": "yes",
              "Name": "main"
            },
            "vpc_id": "vpc-0b8e371539856e746"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:396254537602:vpc/vpc-0b8e371539856e746",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08b837f68a1171f34",
            "default_route_table_id": "rtb-092b5d960971b9beb",
            "default_security_group_id": "sg-02f7d872bed954613",
            "dhcp_options_id": "dopt-0a9382b5846697525",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0b8e371539856e746",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-092b5d960971b9beb",
            "owner_id": "396254537602",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}